# CRevision

./: .gitignore  CMakeLists.txt  README.md
include/: casewidget.h  infowidget.h  mainwindow.h  models.h  nextwidget.h  questioncollectionwidget.h  questionwidget.h  rolewidget.h  userwidget.h
resources/: crevision.rc  resources.qrc
resources/data/: sampleCases.txt  sampleQuestions.txt  sampleQuestionsB.txt
src/: app.cpp  casewidget.cpp  casewidget.h  infowidget.cpp  mainwindow.cpp  mainwindow.h  models.cpp  models.h  nextwidget.cpp  questioncollectionwidget.cpp  questioncollectionwidget.h  questionwidget.cpp  questionwidget.h  rolewidget.cpp  userinfowidget.cpp  userinfowidget.h  userwidget.cpp
